--- a/src/themes/clean-large.scss
+++ b/src/themes/clean-large.scss
@@ -12,6 +12,7 @@ body {
     top: 2px;
     bottom: 42px;
     border: 1px solid #{$borderColor};
+    margin-bottom: 5px
 }
 
 #display-split-bar {
@@ -52,6 +53,11 @@ body {
     right: 170px;
     background-color: transparent;
     border: 1px solid #{$borderColor};
+    padding: 2px;
+}
+
+#commandMeasure {
+    min-height: 32px;
 }
 
 #commandbox {
@@ -59,11 +65,6 @@ body {
     right: 148px;
     height: 32px;
     bottom: 2px;
-}
-
-#commandleft,
-#commandright {
-    display: none;
 }
 
 #commandInput {
@@ -884,11 +885,6 @@ body {
     background-color: #790000;
 }
 
-.command-history {
-    right: 99px;
-    top: 3px;
-}
-
 .command-history .caret {
     border-bottom: 6px dashed;
     border-right: 6px solid transparent;
@@ -896,17 +892,8 @@ body {
     margin: -7px 0 0 0 !important;
 }
 
-#btnTriggers {
-    right: 35px;
-}
-
-#btnParsing {
-    right: 67px;
-}
-
 #btnTriggers,
 #btnParsing {
-    top: 3px;
     text-align: center;
     border-radius: 4px;
     border: 0px;
@@ -935,8 +922,6 @@ body {
 }
 
 #advedit {
-    top: 3px;
-    right: 3px;
     text-align: center;
     border-radius: 4px;
     border: 0px;
