--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -14,6 +14,7 @@ body {
     top: 2px;
     bottom: 29px;
     border: 1px solid #{$borderColor};
+    margin-bottom: 5px;
 }
 
 #display-split-bar {
@@ -42,6 +43,7 @@ body {
     right: 170px;
     background-color: transparent;
     border: 1px solid #{$borderColor};
+    padding: 2px;
 }
 
 #commandbox {
@@ -49,11 +51,6 @@ body {
     right: 96px;
     height: 18px;
     bottom: 2px;
-}
-
-#commandleft,
-#commandright {
-    display: none;
 }
 
 #commandInput {
@@ -813,21 +810,7 @@ body {
     background-color: #2a2d2e;
 }
 
-.command-history {
-    right: 58px;
-    top: 3px;
-}
-
-#btnTriggers {
-    right: 22px;
-}
- 
-#btnParsing {
-    right: 40px;
-}
-
 #btnTriggers, #btnParsing {
-    top: 3px;
     text-align: center;
     border-radius: 4px;
     border: 0px;
@@ -852,8 +835,6 @@ body {
 }
 
 #advedit {
-    top: 3px;
-    right: 3px;
     text-align: center;
     border-radius: 4px;
     border: 0px;
