--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -30,6 +30,7 @@ body {
     top: 2px;
     bottom: 29px;
     border: 1px solid #{$borderColor};
+    margin-bottom: 5px;
 }
 
 #display-split-bar {
@@ -62,6 +63,7 @@ body {
     background-color: #{$commandBack};
     border: 1px solid #{$borderColor};
     color: #{$commandText};
+    padding: 2px;
 }
 
 #commandbox {
@@ -69,11 +71,6 @@ body {
     right: 96px;
     height: 18px;
     bottom: 2px;
-}
-
-#commandleft,
-#commandright {
-    display: none;
 }
 
 #commandInput {
@@ -839,21 +836,7 @@ body {
     background-color: #{$buttonActiveBack};
 }
 
-.command-history {
-    right: 58px;
-    top: 3px;
-}
-
-#btnTriggers {
-    right: 22px;
-}
- 
-#btnParsing {
-    right: 40px;
-}
-
 #btnTriggers, #btnParsing {
-    top: 3px;
     text-align: center;
     border-radius: 4px;
     border: 0px;
@@ -877,8 +860,6 @@ body {
 }
 
 #advedit {
-    top: 3px;
-    right: 3px;
     text-align: center;
     border-radius: 4px;
     border: 0px;
