--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -157,7 +157,8 @@ body {
 }
 
 #display::-webkit-scrollbar,
-#bars::-webkit-scrollbar {
+#bars::-webkit-scrollbar,
+#commandInput::-webkit-scrollbar {
     width: 12px;
     height: 12px;
 }
@@ -165,7 +166,8 @@ body {
 /* Track */
 
 #display::-webkit-scrollbar-track,
-#bars::-webkit-scrollbar-track {
+#bars::-webkit-scrollbar-track,
+#commandInput::-webkit-scrollbar-track {
     background-color: #{$panelBackground};
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 
@@ -177,29 +179,34 @@ body {
 /* Handle */
 
 #display::-webkit-scrollbar-thumb,
-#bars::-webkit-scrollbar-thumb {
+#bars::-webkit-scrollbar-thumb,
+#commandInput::-webkit-scrollbar-thumb {
     /*border-radius: 10px;*/
     background: #33302b;
     border: 1px solid #{$borderColor};
 }
 
 #display::-webkit-scrollbar-thumb:hover,
-#bars::-webkit-scrollbar-thumb:hover {
+#bars::-webkit-scrollbar-thumb:hover,
+#commandInput::-webkit-scrollbar-thumb:hover {
     background: #807f7e;
 }
 
 #display::-webkit-scrollbar-thumb:active,
-#bars::-webkit-scrollbar-thumb:active {
+#bars::-webkit-scrollbar-thumb:active,
+#commandInput::-webkit-scrollbar-thumb:active {
     background: #080808;
 }
 
 #display::-webkit-scrollbar-thumb:window-inactive,
-#bars::-webkit-scrollbar-thumb:window-inactive {
+#bars::-webkit-scrollbar-thumb:window-inactive,
+#commandInput::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(51, 48, 43, 0.4);
 }
 
 #display::-webkit-scrollbar-corner,
-#bars::-webkit-scrollbar-corner {
+#bars::-webkit-scrollbar-corner,
+#commandInput::-webkit-scrollbar-corner {
     background-color: #{$panelBackground};
 
     /*
