--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -195,7 +195,8 @@ body {
 }
 
 #display::-webkit-scrollbar,
-#bars::-webkit-scrollbar {
+#bars::-webkit-scrollbar,
+#commandInput::-webkit-scrollbar {
     width: 12px;
     height: 12px;
 }
@@ -203,35 +204,41 @@ body {
 /* Track */
 
 #display::-webkit-scrollbar-track,
-#bars::-webkit-scrollbar-track {
+#bars::-webkit-scrollbar-track,
+#commandInput::-webkit-scrollbar-track {
     background-color: #{$panelBackground};
 }
 
 /* Handle */
 
 #display::-webkit-scrollbar-thumb,
-#bars::-webkit-scrollbar-thumb {
+#bars::-webkit-scrollbar-thumb,
+#commandInput::-webkit-scrollbar-thumb {
     background: #aaa;
     border: 1px solid #{$borderColor};
 }
 
 #display::-webkit-scrollbar-thumb:hover,
-#bars::-webkit-scrollbar-thumb:hover {
+#bars::-webkit-scrollbar-thumb:hover,
+#commandInput::-webkit-scrollbar-thumb:hover {
     background: #e6e6e6;
 }
 
 #display::-webkit-scrollbar-thumb:active,
-#bars::-webkit-scrollbar-thumb:active {
+#bars::-webkit-scrollbar-thumb:active,
+#commandInput::-webkit-scrollbar-thumb:active {
     background: #848282;
 }
 
 #display::-webkit-scrollbar-thumb:window-inactive,
-#bars::-webkit-scrollbar-thumb:window-inactive {
+#bars::-webkit-scrollbar-thumb:window-inactive,
+#commandInput::-webkit-scrollbar-thumb:window-inactive {
     background: #888;
 }
 
 #display::-webkit-scrollbar-corner,
-#bars::-webkit-scrollbar-corner {
+#bars::-webkit-scrollbar-corner,
+#commandInput::-webkit-scrollbar-corner {
     background-color: #{$panelBackground};
     border-top: 1px solid #{$borderColor};
     border-left: 1px solid #{$borderColor};
