--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -185,7 +185,8 @@ body {
 }
 
 #display::-webkit-scrollbar,
-#bars::-webkit-scrollbar {
+#bars::-webkit-scrollbar,
+#commandInput::-webkit-scrollbar {
     width: 12px;
     height: 12px;
 }
@@ -193,7 +194,8 @@ body {
 /* Track */
 
 #display::-webkit-scrollbar-track,
-#bars::-webkit-scrollbar-track {
+#bars::-webkit-scrollbar-track,
+#commandInput::-webkit-scrollbar-track {
     background-color: #{$panelBack};
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-top: 1px solid #{$borderColor};
@@ -203,28 +205,33 @@ body {
 /* Handle */
 
 #display::-webkit-scrollbar-thumb,
-#bars::-webkit-scrollbar-thumb {
+#bars::-webkit-scrollbar-thumb,
+#commandInput::-webkit-scrollbar-thumb {
     background: #{$buttonColor};
     border: 1px solid #{$buttonBorder};
 }
 
 #display::-webkit-scrollbar-thumb:hover,
-#bars::-webkit-scrollbar-thumb:hover {
+#bars::-webkit-scrollbar-thumb:hover,
+#commandInput::-webkit-scrollbar-thumb:hover {
     background: #{$buttonHoverColor};
 }
 
 #display::-webkit-scrollbar-thumb:active,
-#bars::-webkit-scrollbar-thumb:active {
+#bars::-webkit-scrollbar-thumb:active,
+#commandInput::-webkit-scrollbar-thumb:active {
     background-color: #{$buttonActiveBack};
 }
 
 #display::-webkit-scrollbar-thumb:window-inactive,
-#bars::-webkit-scrollbar-thumb:window-inactive {
+#bars::-webkit-scrollbar-thumb:window-inactive,
+#commandInput::-webkit-scrollbar-thumb:window-inactive {
     background-color: #{$buttonColor};
 }
 
 #display::-webkit-scrollbar-corner,
-#bars::-webkit-scrollbar-corner {
+#bars::-webkit-scrollbar-corner,
+#commandInput::-webkit-scrollbar-corner {
     background-color: #{$panelBack};
 }
 
