Rename a css class to better link to what it does

--- a/src/css/profiles.scss
+++ b/src/css/profiles.scss
@@ -391,7 +391,7 @@ table tr:last-child td {
     position: absolute;
 }
 
-.aura-error,
+.text-error,
 .form-error,
 .has-error a {
     color: #A94442;
