--- a/src/css/composer.scss
+++ b/src/css/composer.scss
@@ -36,7 +36,8 @@ textarea {
     outline: none !important;
 }
 
-.btn-toolbar button, .panel-heading button {
+.btn-toolbar button,
+.panel-heading button {
     min-width: 26px;
 }
 
@@ -60,7 +61,7 @@ textarea {
 }
 
 .input-group {
-    margin:2px;
+    margin: 2px;
 }
 
 .input-group-addon {
@@ -76,6 +77,10 @@ textarea {
     min-height: 100% !important;
 }
 
+.tox.tox-tinymce {
+    height: auto !important;
+    min-height: 100% !important;
+}
 
 /*Container body*/
 
@@ -86,12 +91,18 @@ textarea {
     right: 0;
 }
 
+.mce-tinymce.mce-container.mce-panel {
+    border-top: 1px solid rgb(197, 197, 197);
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
+}
 
 /*Editing area*/
 
 .mce-container-body .mce-edit-area {
     position: absolute;
-    top: 37px;
+    top: 35px;
     /*bottom: 37px;*/
     bottom: 0;
     left: 0;
@@ -121,18 +132,22 @@ i.mce-i-fa-send:before {
     left: 10px;
 }
 
+i.mce-i-fa-sendraw,
+i.mce-i-fa-open {
+    font-size: 26px !important;
+}
+
 i.mce-i-fa-sendraw:before {
     content: "\f1d8";
     font-family: FontAwesome;
     position: absolute;
     top: 5px;
-    left: 5px;
+    left: 10px;
 }
 
 i.mce-i-fa-open:before {
     content: "\f07c";
     font-family: FontAwesome;
-    position: absolute;
     top: 6px;
     left: 8px;
 }
@@ -152,6 +167,8 @@ i.mce-i-fa-open:before {
     height: 0;
     line-height: 0;
     border: 5px dashed #fff !important;
+    border-left-color: transparent !important;
+    border-right-color: transparent !important;
 }
 
 .mce-tooltip-n .mce-tooltip-arrow {
@@ -207,9 +224,11 @@ i.mce-i-fa-open:before {
     0% {
         opacity: 1.0;
     }
+
     50% {
         opacity: 0.0;
     }
+
     100% {
         opacity: 1.0;
     }
@@ -219,9 +238,11 @@ i.mce-i-fa-open:before {
     0% {
         opacity: 1.0;
     }
+
     50% {
         opacity: 0.0;
     }
+
     100% {
         opacity: 1.0;
     }
@@ -1261,8 +1282,16 @@ i.mce-i-fa-open:before {
 .sm-mono23 {
     background-color: #EEEEEE !important;
 }
+
+
+.tox-icon img {
+    padding-top: 4px !important;
+}
+
 /**color icon end**/
 
-.tox .tox-toolbar, .tox .tox-toolbar__overflow, .tox .tox-toolbar__primary {
+.tox .tox-toolbar,
+.tox .tox-toolbar__overflow,
+.tox .tox-toolbar__primary {
     background-attachment: local !important;
 }
