--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -391,6 +391,12 @@ body {
     z-index: 100;
 }
 
+#btm-drag-bar:hover{
+    background-color: #000;    
+    transition-delay: 1s;
+    opacity: 0.5;
+}
+
 #btm-ghost-bar {
     height: 3px;
     background-color: #000;
